<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/studentNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nombre_del_estudiante"
        android:inputType="textPersonName"
        android:minHeight="10dp"
        android:padding="16dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/grade1Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="56dp"
        android:hint="@string/nota_1_15"
        android:inputType="numberDecimal"
        android:padding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/grade2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="56dp"
        android:hint="@string/nota_2_15"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/grade3Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="56dp"
        android:hint="@string/nota_3_20"
        android:inputType="numberDecimal"
        android:padding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/grade4Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="56dp"
        android:hint="@string/nota_4_25"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/grade5Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="56dp"
        android:hint="@string/nota_5_25"
        android:inputType="numberDecimal"
        android:padding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:text="@string/calcular_promedio"
        android:padding="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        android:padding="16dp"
        android:layout_marginTop="16dp" />

</LinearLayout>
